fix: button gap

--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,10 @@
 
 /* common */
 .container {
-    width: 500px;
+    width: 300px;
     background-color: rgba(209, 209, 209, 1);
     margin: 0 auto;
     margin-top: 50px;
-
     border-radius: 10px;
 }
 
@@ -39,19 +38,23 @@ header {
   display: flex;
   flex-wrap: wrap;
   width: 80%;
+  column-gap: 5px;
+  row-gap: 5px;
 }
 .operation {
   display: flex;
   flex-wrap: wrap;
   width: 20%;
+  column-gap: 5px;
+  row-gap: 5px;
 }
 .key {
-  width: calc(100%/3 );
+  width: calc(100%/3);
   font-size: 20px;
   background-color: rgba(187, 187, 187, 1);
   border: 0px;
   border-radius: 5px;
-  width: calc(100%/3);
+  height: 50px;
 }
 .zero {
   width: calc(100%/2);
